Update .gitignore to ignore Xcode user and workspace local files

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 # Xcode
 DerivedData/
 *.xcuserstate
-xcuserdata/
+*.xcuserdata
+*.xcshareddata/WorkspaceSettings.xcsettings
 
 # Swift Package Manager (se aparecer no futuro)
 .build/
